--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11588/2711204123.py:11: DtypeWarning:\n",
+      "/tmp/ipykernel_16680/2711204123.py:11: DtypeWarning:\n",
       "\n",
       "Columns (147,149,150,151,153,155,156,157) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -39,45 +39,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this function with the help of col_sum() function will build a bar graph for a country showing the total number of people, \n",
-    "#total number of male and total number of female migrated from that country in the time span of 5 years from 2014-2019 for ESTAT\n",
-    "#and from 2015-2019 for UN dataset\n",
+    "# Function to calculate the total number of people who migrated from a country in a given year,\n",
+    "# if no destination country is provided, it returns the total number of people migrated from the origin country regardless of the destination country.\n",
+    "def col_sum(source, year, gender, age, type, origin_country=None, destination_country=None):\n",
+    "    \"\"\"\n",
+    "    source : String \n",
+    "           for dataset from EUROSTAT 'ESTAT'\n",
+    "           for dataset from UN 'UN'\n",
+    "\n",
+    "    year :String \n",
+    "            year for the data\n",
+    "    gender : String \n",
+    "            'T' for both, \n",
+    "            'M' for Male, \n",
+    "            'F' for Female\n",
+    "    age : String \n",
+    "            'T' for all ages, \n",
+    "            for below 15 '<15', \n",
+    "            between 15- 64 '15-64',\n",
+    "            above 64 '>64',\n",
+    "    type : String \n",
+    "           for citizen type migration 'cit',\n",
+    "           for residence type migration 'res'\n",
+    "    origin_country: String  \n",
+    "            name of the origin country\n",
+    "    destination_country : \n",
+    "            String name of the destination country\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # If both origin and destination countries are provided\n",
+    "    if origin_country and destination_country:\n",
+    "        # Calculate the sum of migration from origin to destination country\n",
+    "        value = countries_of_interest_df[\n",
+    "            (countries_of_interest_df['origin_name'] == origin_country) & \n",
+    "            (countries_of_interest_df['destination_name'] == destination_country)\n",
+    "        ][f'{source}_{year}_{gender}_{age}_{type}'].sum()\n",
+    "\n",
+    "    # If only origin country is provided\n",
+    "    elif origin_country:\n",
+    "        # Calculate the sum of migration from origin country to any destination\n",
+    "        value = countries_of_interest_df[\n",
+    "            (countries_of_interest_df['origin_name'] == origin_country)\n",
+    "        ][f'{source}_{year}_{gender}_{age}_{type}'].sum()\n",
+    "\n",
+    "    return value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function, with the help of col_sum() function, will build a bar graph for a country showing the total number of people,\n",
+    "# total number of male, and total number of female migrants from that country in the time span of 5 years from 2014-2019 for ESTAT\n",
+    "# and from 2015-2019 for UN dataset.\n",
     "def bar_graph_of_country(origin_country, source, type):\n",
     "    '''\n",
-    "        source : String \n",
-    "               for dataset from EUROSTAT 'ESTAT'\n",
-    "               for dataset from UN 'UN'\n",
-    "        origin_country: String  \n",
-    "                name of the origin country\n",
-    "        type : String \n",
-    "               for citizen type migration 'cit',\n",
-    "               for residence type migration 'res'\n",
+    "    source : String \n",
+    "           for dataset from EUROSTAT 'ESTAT'\n",
+    "           for dataset from UN 'UN'\n",
+    "    origin_country: String  \n",
+    "            name of the origin country\n",
+    "    type : String \n",
+    "           for citizen type migration 'cit',\n",
+    "           for residence type migration 'res'\n",
     "    '''\n",
-    "    if source == \"UN\": #for UN we have data for the years 2015-2019\n",
-    "        graph_for_a_country = {'2015':{'Both':col_sum(source, \"2015\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2015\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2015\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2016':{'Both':col_sum(source, \"2016\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2016\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2016\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2017':{'Both':col_sum(source, \"2017\", \"T\", \"T\", type, origin_country ), 'Male':col_sum(source, \"2017\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2017\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2018':{'Both':col_sum(source, \"2018\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2018\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2018\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2019':{'Both':col_sum(source, \"2019\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2019\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2019\", \"F\", \"T\", type, origin_country )}\n",
-    "                                                                                    }\n",
     "\n",
-    "    else: #for ESTAT we have data for the years 2014-2019\n",
-    "        graph_for_a_country = {'2014':{'Both':col_sum(source, \"2014\", \"T\", \"T\", type, origin_country ), 'Male':col_sum(source, \"2014\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2014\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2015':{'Both':col_sum(source, \"2015\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2015\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2015\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2016':{'Both':col_sum(source, \"2016\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2016\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2016\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2017':{'Both':col_sum(source, \"2017\", \"T\", \"T\", type, origin_country ), 'Male':col_sum(source, \"2017\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2017\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2018':{'Both':col_sum(source, \"2018\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2018\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2018\", \"F\", \"T\", type, origin_country  )},\n",
-    "                                                                                    '2019':{'Both':col_sum(source, \"2019\", \"T\", \"T\", type, origin_country  ), 'Male':col_sum(source, \"2019\", \"M\", \"T\", type, origin_country  ),'Female': col_sum(source, \"2019\", \"F\", \"T\", type, origin_country )}\n",
-    "                                                                                    }\n",
-    "    \n",
-    "    return graph_for_a_country\n",
+    "    # Check if the source is from the UN dataset\n",
+    "    if source == \"UN\":  # for UN we have data for the years 2015-2019\n",
+    "        # Build a dictionary for the data for each year\n",
+    "        graph_for_a_country = {\n",
+    "            '2015': {'Both': col_sum(source, \"2015\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2015\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2015\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2016': {'Both': col_sum(source, \"2016\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2016\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2016\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2017': {'Both': col_sum(source, \"2017\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2017\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2017\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2018': {'Both': col_sum(source, \"2018\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2018\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2018\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2019': {'Both': col_sum(source, \"2019\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2019\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2019\", \"F\", \"T\", type, origin_country)}\n",
+    "        }\n",
+    "    else:  # for ESTAT we have data for the years 2014-2019\n",
+    "        # Build a dictionary for the data for each year\n",
+    "        graph_for_a_country = {\n",
+    "            '2014': {'Both': col_sum(source, \"2014\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2014\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2014\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2015': {'Both': col_sum(source, \"2015\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2015\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2015\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2016': {'Both': col_sum(source, \"2016\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2016\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2016\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2017': {'Both': col_sum(source, \"2017\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2017\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2017\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2018': {'Both': col_sum(source, \"2018\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2018\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2018\", \"F\", \"T\", type, origin_country)},\n",
+    "            '2019': {'Both': col_sum(source, \"2019\", \"T\", \"T\", type, origin_country),\n",
+    "                     'Male': col_sum(source, \"2019\", \"M\", \"T\", type, origin_country),\n",
+    "                     'Female': col_sum(source, \"2019\", \"F\", \"T\", type, origin_country)}\n",
+    "        }\n",
     "\n",
-    "    \n",
-    "    "
+    "    return graph_for_a_country\n"
    ]
   },
   {
@@ -89,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +180,6 @@
     }
    ],
    "source": [
-    "\n",
     "#geting a list of the unique country names\n",
     "country_names = countries_of_interest_df['origin_name'].unique().tolist()\n",
     "#dividing the single list into 5 nested lists for convenience for the later part where we will plot graph\n",
@@ -118,7 +193,6 @@
     "        #this is the part where our nested list will come handy, we can use the same i and j indices for axis[i,j] \n",
     "        #that we used above to fetch country name\n",
     "        x.transpose().plot(ax=axes[i,j], kind='bar', title= country_names[i][j])\n",
-    "    \n",
     "\n",
     "\n",
     "\n",
