--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -185,10 +185,12 @@
     "#dividing the single list into 5 nested lists for convenience for the later part where we will plot graph\n",
     "country_names = [country_names[i:i+5] for i in range(0, len(country_names), 5)]\n",
     "fig, axes = plt.subplots(5, 5, figsize=(25,28))\n",
-    "#by making nested lists we can iterated over the country names and also plot the graph at the given axis easily\n",
+    "# Iterating over the nested lists of country names and plotting the graph for each country\n",
     "for i in range(0,5):\n",
     "    for j in range(0,5):\n",
+    "        # Fetching data for the bar graph of the current country\n",
     "        graph_for_a_country = bar_graph_of_country(country_names[i][j], \"ESTAT\", \"res\")\n",
+    "        # Converting the data into a DataFrame\n",
     "        x = pd.DataFrame(graph_for_a_country)\n",
     "        #this is the part where our nested list will come handy, we can use the same i and j indices for axis[i,j] \n",
     "        #that we used above to fetch country name\n",
