--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16680/2711204123.py:11: DtypeWarning:\n",
+      "/tmp/ipykernel_29239/2711204123.py:11: DtypeWarning:\n",
       "\n",
       "Columns (147,149,150,151,153,155,156,157) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,9 +266,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_14020\\1282738831.py:5: FutureWarning:\n",
+      "/tmp/ipykernel_29239/1282738831.py:5: FutureWarning:\n",
       "\n",
-      "The provided callable <function sum at 0x0000017ADA0FC7C0> is currently using SeriesGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "The provided callable <function sum at 0x7f94057b8ca0> is currently using SeriesGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
       "\n"
      ]
     }
@@ -1319,7 +1319,7 @@
     "            text= group_residence['origin_name'],\n",
     "            z=group_residence['residence_sum_5_years'],\n",
     "            colorbar = {'title':'Number of migrants'})\n",
-    "layout = dict(geo = {'scope':'world'}, title= \"Graph showing number of migrants from Post conflict contries with Residence status\")\n",
+    "layout = dict(geo = {'scope':'world'}, title= \"Graph showing number of migrants from Post-conflict contries with Residence Status\")\n",
     "choromap = go.Figure(data = [data],layout = layout)\n",
     "iplot(choromap)"
    ]
