--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_32756\\1921585407.py:12: DtypeWarning:\n",
-      "\n",
-      "Columns (147,149,150,151,153,155,156,157) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mchart_studio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m plotly \u001b[38;5;28;01mas\u001b[39;00m py\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
      ]
     }
    ],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,12 +162,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Bar Graph showing Male, Female, and Both (Male and Female) Ratio of Immigrants with both Residency Status and Citizenship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting a list of unique country names\n",
+    "country_names = countries_of_interest_df['origin_name'].unique().tolist()\n",
+    "\n",
+    "# Dividing the single list into 5 nested lists for convenience for the later part where we will plot the graph\n",
+    "country_names = [country_names[i:i+5] for i in range(0, len(country_names), 5)]\n",
+    "\n",
+    "# Creating subplots for the grid layout\n",
+    "fig, axes = plt.subplots(5, 5, figsize=(25,28))\n",
+    "\n",
+    "# Iterating over the nested lists of country names and plotting the graph for each country\n",
+    "for i in range(0,5):\n",
+    "    for j in range(0,5):\n",
+    "        # Fetching data for the bar graph of the current country for residents\n",
+    "        graph_residents = bar_graph_of_country(country_names[i][j], \"ESTAT\", \"res\")\n",
+    "        # Converting the data into a DataFrame for residents\n",
+    "        df_residents = pd.DataFrame(graph_residents)\n",
+    "        \n",
+    "        # Fetching data for the bar graph of the current country for citizens\n",
+    "        graph_citizens = bar_graph_of_country(country_names[i][j], \"ESTAT\", \"cit\")\n",
+    "        # Converting the data into a DataFrame for citizens\n",
+    "        df_citizens = pd.DataFrame(graph_citizens)\n",
+    "        \n",
+    "        # Combining the data for both residents and citizens\n",
+    "        df_combined = df_residents.add(df_citizens, fill_value=0)\n",
+    "        \n",
+    "        # Defining colors for the bars\n",
+    "        colors = {'Both': 'purple', 'Male': 'blue', 'Female': 'pink'}\n",
+    "        \n",
+    "        # Plotting the combined bar graph on the current subplot\n",
+    "        df_combined.transpose().plot(ax=axes[i,j], kind='bar', title=country_names[i][j], color=colors)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Bar graph showing Male, Female and Both(Male and Female) ratio of the imigrants with residence status in the respective years w.r.t the origin country. The results are for ESTAT dataset**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2819,7 +2865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2849,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2947,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3011,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3072,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3352,7 +3398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3691,7 +3737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3736,7 +3782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
